# gdal_basics

./: CMakeLists.txt  README.md  main.cpp  result.txt
